--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-string-replace": "^1.1.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "classnames": "^2.3.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
