--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "newsletter-sign-up-with-success-message",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://damishalkina.github.io/newsletter-sign-up-with-success-message",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -22,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "serve -s build"
   },
   "eslintConfig": {
     "extends": [
